package edu.hitsz.bullet;

/**
 * @Author hitsz
 * 英雄子弹
 */
public class HeroBullet extends AbstractBullet {

    public HeroBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }

}
