@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + FlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(FlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<AbstractBullet>
 }

abstract class AbstractBullet
{
    - power:int
    + Bullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

abstract class AbstractBoosterPacks
{
    + bonus():void
    + AbstractBoosterPacks(int locationX, int locationY, int speedX, int speedY)
    + forward():void
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- AbstractBullet
AbstractFlyingObject <|-- AbstractBoosterPacks

AbstractAircraft <|-- AbstractEnemy
AbstractAircraft <|-- HeroAircraft
AbstractEnemy <|-- MobEnemy
AbstractEnemy <|-- EliteEnemy
AbstractEnemy <|-- BossEnemy

AbstractBullet <|-- HeroBullet
AbstractBullet <|-- EnemyBullet

AbstractBoosterPacks <|-- PropBlood
AbstractBoosterPacks <|-- PropBullet
AbstractBoosterPacks <|-- PropBomb




class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    - {static} instance:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance():HeroAircraft
    + forward():void
    + shoot():List<AbstractBullet>
}

abstract class AbstractEnemy{
    + AbstractEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}


class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<AbstractBullet>
}

class EliteEnemy{
    - power:int
    - direction:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<AbstractBullet>
    + forward():void
}

class BossEnemy{
    - power:int
    - direction:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<AbstractBullet>
    + forward():void
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}


class PropBlood{
    + PropBlood(int locationX, int locationY, int speedX, int speedY)
}

class PropBomb{
    + PropBomb(int locationX, int locationY, int speedX, int speedY)
}

class PropBullet{
    + PropBullet(int locationX, int locationY, int speedX, int speedY)
}

@enduml